--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -5,22 +5,24 @@ on:
     # Runs at 12am IST
     - cron: '30 18 * * *'
   workflow_dispatch:
+
 jobs:
   update-readme:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: actions/checkout@v2  # Check out the repository
+      - uses: anmol098/waka-readme-stats@master  # Action to update README with WakaTime stats
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TITLE: true  # Optional: Show a title
-          SECTION_NAME: waka  # Optional: Name of the section
-          BLOCKS: languages,time,code  # Optional: Adjust blocks to show (languages, time, code)
-          CODE_LANG: csharp,c,blazor,powershell,html,css,javascript  # Optional: List of languages to focus on
-          TIME_RANGE: all_time  # Optional: Track all-time data
-          LANG_COUNT: 10  # Optional: Number of languages to show
-          SHOW_TIME: true  # Optional: Show time spent
-          SHOW_TOTAL: true  # Optional: Show total coding time
-          SHOW_MASKED_TIME: false  # Optional: Show masked time if any
-          STOP_AT_OTHER: true  # Optional: Stop at other languages
+          SHOW_TITLE: true
+          SECTION_NAME: waka
+          BLOCKS: languages,time,code
+          CODE_LANG: csharp,c,blazor,powershell,html,css,javascript
+          TIME_RANGE: all_time
+          LANG_COUNT: 10
+          SHOW_TIME: true
+          SHOW_TOTAL: true
+          SHOW_MASKED_TIME: false
+          STOP_AT_OTHER: true
