--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -5,13 +5,12 @@ on:
     # Runs at 12am IST
     - cron: '30 18 * * *'
   workflow_dispatch:
-
 jobs:
   update-readme:
-    name: Update Readme with Metrics
-    runs-on: ubuntu-latest
+    name: Profile Readme Development Stats
+    runs-on: ubuntu-latest                      
     steps:
-      - uses: anmol098/waka-readme-stats@master  # Action to update README with WakaTime stats
+      - uses: anmol098/waka-readme-stats@v4  # Action to update README with WakaTime stats
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
