--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -5,20 +5,19 @@ on:
     # Runs at 12am IST
     - cron: '30 18 * * *'
   workflow_dispatch:
+
 jobs:
   update-readme:
+    name: Profile Readme Development Stats
     runs-on: ubuntu-latest
     steps:
-      - name: Profile Readme Development Stats      
-        uses: anmol098/waka-readme-stats@v4  # Action to update README with WakaTime stats
+      - uses: actions/checkout@v3  # Check out the repository
+      - uses: anmol098/waka-readme-stats@v4  # Action to update README with WakaTime stats
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SECTION_NAME: waka  # Name of the section
           SHOW_LANGUAGE: true  # Show languages
-          SHOW_TOTAL_CODE_TIME: true  # Show total coding time
-          SHOW_TIMEZONE: true  # Optional: Show timezone
-          SHOW_EDITORS: true  # Optional: Show editors
-          SHOW_PROJECTS: true  # Optional: Show projects
-          SYMBOL_VERSION: 3  # Optional: Symbol version
-          DEBUG_LOGGING: true  # Enable debugging (Optional)
+          SHOW_TOTAL_CODE_TIME: true  # Show total coding time (if this is supported)
+          SHOW_TIMEZONE: true  # Show timezone
+          SHOW_EDITORS: true  # Show editors
+          SHOW_PROJECTS: true  # Show projects
